Refactor/24/modulization each domain (#26)
* [Refactor] module 도메인 3개로 분리

tetris-core (POJO tetris algorithm)
tetris-client (JavaFX)
tetris-backend (SpringBoot)

* git squash feat/24/branches

.

* Refactor 마무리